2025-02-18T01:42:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13381540039 # 569
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-18
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 886 1361 / 913 1393
* notice: next accum: outdated-unq outdated-all / unq all: 901 1381 / 914 1394
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-03 2025-02-04] / [2025-02-17]

2025-02-17T01:46:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13361151648 # 568
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-17
* notice: last 14d: unq all: 8 19
* notice: prev accum: outdated-unq outdated-all / unq all: 886 1361 / 912 1392
* notice: next accum: outdated-unq outdated-all / unq all: 886 1361 / 913 1393
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -9 -13 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-03 2025-02-16]

2025-02-16T01:49:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13350609517 # 567
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-16
* notice: last 14d: unq all: 17 31
* notice: prev accum: outdated-unq outdated-all / unq all: 885 1360 / 910 1390
* notice: next accum: outdated-unq outdated-all / unq all: 886 1361 / 912 1392
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-02-02] / [2025-02-15]

2025-02-15T01:41:20Z: