@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-18T01:42:24Z",
-  "count_outdated" : 1381,
-  "uniques_outdated" : 901,
-  "count" : 1394,
-  "uniques" : 914,
+  "timestamp" : "2025-02-19T01:43:12Z",
+  "count_outdated" : 1382,
+  "uniques_outdated" : 902,
+  "count" : 1396,
+  "uniques" : 916,
   "clones" : [
-    {
-      "timestamp": "2025-02-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-06T00:00:00Z",
       "count": 1,
@@ -112,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-18T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
